fixed z-index of fabShare and aligned it to the right

--- a/public/styles/shareFab.css
+++ b/public/styles/shareFab.css
@@ -3,7 +3,9 @@
   bottom: 0;
   position: fixed;
   margin: 1em;
-  right: 20px;
+  left: 20px;
+  z-index: 10;
+
 }
 
 .buttons:active, .buttons:focus, .buttons:hover {
